# android-vts

./: .gitignore  CONTRIBUTING.md  License.md  README.md  Readme.md  build.gradle  build.sh  gradle.properties  index.html  params.json  vulnerabilities.yara
RageAgainstTheCage/: Readme.md
app/: CMakeLists.txt  build.gradle  build_and_run.sh  proguard-rules.pro
app/jni/: ashmem_bug.c  futex_exploit_check.c
app/jni/include/linux/: inet_diag.h
app/src/main/: AndroidManifest.xml  build_and_run.sh  fuzion24_device_vulnerability_vulnerabilities_framework_serialization_OpenSSLTransientBug.h  sort_vuln_map.sh
app/src/main/assets/: vuln_map.json
app/src/main/assets/crashCheck/: crashCheck  crashCheck-pie
app/src/main/assets/stagefright/: stagefrightCheck  stagefrightCheck-pie  utilcheck-pie
app/src/main/jni/: Android.mk  Application.mk  ashmem_bug.c  asroot.h  crash_check.c  cve20151528.c  cve20160808.c  dirtycow.c  exploid.c  exynos.c  futex_exploit_check.c  graphics_bufferoverflow.c  graphics_bufferoverflow.cpp  graphics_into_overflow_test.c  l2tp_exploit_check.c  levitator.c  libutils_bug.c  mempodroid.c  native_helper.c  ping_pong.c  put_get_user_check.c  stage_fright.c  vector_bug.cpp  wunderbar.c  x509serializationhelper.c
app/src/main/res/layout/: activity_main.xml  activity_open_source_licences.xml  app_layout.xml  dialog_scan_details_layout.xml  dialog_vulnerability_details.xml  splashscreen_layout.xml  vulnerability_layout.xml  vulnerable_application_activity.xml
app/src/main/res/menu/: main.xml  main_menu.xml
app/src/main/res/values-v21/: dimen.xml
(+424 files in other folders)
